--- a/css/wdfb.css
+++ b/css/wdfb.css
@@ -10,7 +10,7 @@ a.wdfb_register_button, a.wdfb_register_button:hover, a.wdfb_register_button:act
 	text-decoration: none;
 	color: #FFF;
 
-	background: url("http://static.ak.fbcdn.net/rsrc.php/v1/yL/r/FGFbc80dUKj.png") no-repeat scroll 0 0 #29447E;
+	background: url("https://s-static.ak.facebook.com/rsrc.php/v1/zL/r/FGFbc80dUKj.png") no-repeat scroll 0 0 #29447E;
 	background-position: left -60px;
     cursor: pointer;
     display: inline-block;
@@ -28,7 +28,7 @@ a.wdfb_register_button span {
 	font-weight: bold;
 	text-align: center;
 
-	background: url("http://static.ak.fbcdn.net/rsrc.php/v1/yL/r/FGFbc80dUKj.png") repeat scroll 0 0 #5F78AB;
+	background: url("https://s-static.ak.facebook.com/rsrc.php/v1/zL/r/FGFbc80dUKj.png") repeat scroll 0 0 #5F78AB;
     border-bottom: 1px solid #1A356E;
     border-top: 1px solid #879AC0;
     color: #FFFFFF;
