--- a/css/wdfb.css
+++ b/css/wdfb.css
@@ -1,17 +1,10 @@
 @CHARSET "UTF-8";
 
 a.wdfb_register_button, a.wdfb_register_button:hover, a.wdfb_register_button:active, a.wdfb_register_button:visited {
-/*
-	background: url(../img/fb-big-button.png) top left no-repeat #5B74A8;
-	border: 1px solid black;
-	border-color: #29447E #29447E #1A356E;
-	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
-*/
 	text-decoration: none;
 	color: #FFF;
 
-	background: url("https://s-static.ak.facebook.com/rsrc.php/v1/zL/r/FGFbc80dUKj.png") no-repeat scroll 0 0 #29447E;
-	background-position: left -60px;
+	background: url("//static.ak.fbcdn.net/rsrc.php/v2/yx/r/j_i0CTUUUEe.png") no-repeat scroll 0 0 #29447E;
     cursor: pointer;
     display: inline-block;
     outline: medium none;
@@ -28,7 +21,7 @@ a.wdfb_register_button span {
 	font-weight: bold;
 	text-align: center;
 
-	background: url("https://s-static.ak.facebook.com/rsrc.php/v1/zL/r/FGFbc80dUKj.png") repeat scroll 0 0 #5F78AB;
+	background: #5F78AB;
     border-bottom: 1px solid #1A356E;
     border-top: 1px solid #879AC0;
     color: #FFFFFF;
