css fixes for album shortcode

--- a/css/wdfb.css
+++ b/css/wdfb.css
@@ -30,11 +30,7 @@ a.wdfb_register_button span {
     padding: 2px 6px 3px 12px;
     text-shadow: none;
 }
-.wdfb-album-image-wrapper {
-    float: left;
-    margin: 0 4px;
-}
-.wdfb-album-image-wrapper a {
+.wdfb-album-image-row a {
     display: inline-block;
 }
 #TB_caption {
