Fixed Album selector for widget

--- a/css/wdfb.css
+++ b/css/wdfb.css
@@ -55,3 +55,4 @@ a.wdfb_register_button span {
 .Wdfb_WidgetAlbums .wdfb-album-image-row {
     margin: 0 0.5em 0.5em;
 }
+.Wdfb_WidgetAlbums .wdfb-album-image-row
